--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "matplotlib",
     "seaborn",
     "plotly",
-    "nbformat"
+    "nbformat",
+    "huggingface_hub[cli]"
 ]
 
 [tool.uv]
